--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon server/app.js",
     "client": "npm start --prefix client",
-    "start": "npm run server & npm run client & wait -n",
+    "start": "web:npm run server & npm run client & wait -n",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
