--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "server": "nodemon server/app.js",
     "client": "npm run build --prefix client",
-    "start": "npm run server & npm run client & wait -n",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "npm run server",
+    "dev": "concurrently \"npm run server\" \"npm start --prefix client\"",
+    "heroku-postbuild": "cd client && npm install && npm run build && cd .. && cd server && npm install"
   },
   "keywords": [],
   "author": "Ofer Tauber",
