--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon server/app.js",
     "client": "npm run build --prefix client",
-    "start": "npm run server",
+    "start": "node server/app.js",
     "dev": "concurrently \"npm run server\" \"npm start --prefix client\"",
     "heroku-postbuild": "cd client && npm install && npm run build && cd .. && cd server && npm install"
   },
