--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "npm run build --prefix client",
     "start": "node server/app.js",
     "dev": "concurrently \"npm run server\" \"npm start --prefix client\"",
-    "heroku-postbuild": "cd client && npm install && npm run build && cd .. && cd server && npm install"
+    "heroku-postbuild": "cd client && npm install && npm run build && cd .. && cd server && npm install && cd .."
   },
   "keywords": [],
   "author": "Ofer Tauber",
