--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "semantic-ui-react": "^2.1.3",
     "uniqid": "^5.4.0"
   }
 }
